  - Reduce contributions calendar data payload (ClemMakesApps)
  - Add `web_url` field to issue, merge request, and snippet API objects (Ben Boeckel)
  - Set path for all JavaScript cookies to honor GitLab's subdirectory setting !5627 (Mike Greiling)
  - Fix bug where pagination is still displayed despite all todos marked as done (ClemMakesApps)
  - Shorten task status phrase (ClemMakesApps)
  - Add hover color to emoji icon (ClemMakesApps)
  - Fix branches page dropdown sort alignment (ClemMakesApps)
  - Add white background for no readme container (ClemMakesApps)
  - API: Expose issue confidentiality flag. (Robert Schilling)
  - Optimistic locking for Issues and Merge Requests (title and description overriding prevention)
  - Add `wiki_page_events` to project hook APIs (Ben Boeckel)
  - Remove Gitorious import
  - Fix inconsistent background color for filter input field (ClemMakesApps)
  - Add Sentry logging to API calls
  - Add BroadcastMessage API
  - Automatically expand hidden discussions when accessed by a permalink !5585 (Mike Greiling)
  - Remove unused mixins (ClemMakesApps)
  - Add search to all issue board lists
  - Fix groups sort dropdown alignment (ClemMakesApps)
  - Add horizontal scrolling to all sub-navs on mobile viewports (ClemMakesApps)
  - Fix markdown help references (ClemMakesApps)
  - Add last commit time to repo view (ClemMakesApps)
  - Added project specific enable/disable setting for LFS !5997
  - Don't expose a user's token in the `/api/v3/user` API (!6047)
  - Remove redundant js-timeago-pending from user activity log (ClemMakesApps)
  - Added tests for diff notes
  - Add a button to download latest successful artifacts for branches and tags !5142
  - Remove redundant pipeline tooltips (ClemMakesApps)
  - Add delimiter to project stars and forks count (ClemMakesApps)
  - Fix badge count alignment (ClemMakesApps)
  - Fix repo title alignment (ClemMakesApps)
  - Fix branch title trailing space on hover (ClemMakesApps)