@@ -2,6 +2,7 @@
   .stage {
     max-width: 90px;
     width: 90px;
+    text-align: center;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -146,16 +147,13 @@
   }
 
   .stage-cell {
+    text-align: center;
 
     svg {
       height: 18px;
       width: 18px;
       vertical-align: middle;
       overflow: visible;
-    }
-
-    .light {
-      width: 3px;
     }
   }
 
